revert the AckID interface back