@@ -36,6 +36,32 @@ public class AbstractSubscriptionTest {
         }
     }
 
+    private static class TestAckID implements AckID {
+        private final String id;
+
+        TestAckID(String id) {
+            this.id = id;
+        }
+
+        @Override
+        public String toString() {
+            return id;
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            if (this == obj) return true;
+            if (obj == null || getClass() != obj.getClass()) return false;
+            TestAckID testAckID = (TestAckID) obj;
+            return id != null ? id.equals(testAckID.id) : testAckID.id == null;
+        }
+
+        @Override
+        public int hashCode() {
+            return id != null ? id.hashCode() : 0;
+        }
+    }
+
     // Mock external message source that simulates a real pub/sub service
     private static class MockMessageSource {
         private final Queue<Message> availableMessages = new ArrayDeque<>();
@@ -90,10 +116,10 @@ public class AbstractSubscriptionTest {
         }
 
         @Override
-        protected void doSendAcks(List<String> ackIDs) { }
+        protected void doSendAcks(List<AckID> ackIDs) { }
 
         @Override
-        protected void doSendNacks(List<String> ackIDs) { }
+        protected void doSendNacks(List<AckID> ackIDs) { }
 
         @Override
         protected Batcher.Options createAckBatcherOptions() {
@@ -218,7 +244,7 @@ public class AbstractSubscriptionTest {
         TestSubscription sub = new TestSubscription(source);
 
         // sendAcks should throw exception for null AckID in list
-        List<String> ackIDs = new ArrayList<>();
+        List<AckID> ackIDs = new ArrayList<>();
         ackIDs.add(null);
         
         assertThrows(InvalidArgumentException.class, () -> sub.sendAcks(ackIDs));
@@ -241,7 +267,7 @@ public class AbstractSubscriptionTest {
         TestSubscription sub = new TestSubscription(source);
 
         // Create a mock AckID
-        String mockAckID = "test-ack-id";
+        AckID mockAckID = new TestAckID("test-ack-id");
 
         // sendAck should not throw exception for valid AckID
         assertDoesNotThrow(() -> sub.sendAck(mockAckID));
@@ -253,7 +279,10 @@ public class AbstractSubscriptionTest {
         TestSubscription sub = new TestSubscription(source);
 
         // Create mock AckIDs
-        List<String> ackIDs = List.of("test-ack-id-1", "test-ack-id-2");
+        List<AckID> ackIDs = Arrays.asList(
+            new TestAckID("test-ack-id-1"),
+            new TestAckID("test-ack-id-2")
+        );
 
         // sendAcks should return completed future for valid AckIDs
         CompletableFuture<Void> future = sub.sendAcks(ackIDs);
@@ -379,7 +408,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNackWithValidAckID() {
         TestSubscription testSubscription = new TestSubscription();
-        String ackID = "test-ack-id";
+        AckID ackID = new TestAckID("test-ack-id");
         
         assertDoesNotThrow(() -> testSubscription.sendNack(ackID));
     }
@@ -396,7 +425,10 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithValidAckIDs() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = Arrays.asList("test-ack-id-1", "test-ack-id-2");
+        List<AckID> ackIDs = Arrays.asList(
+            new TestAckID("test-ack-id-1"),
+            new TestAckID("test-ack-id-2")
+        );
         
         assertDoesNotThrow(() -> testSubscription.sendNacks(ackIDs));
     }
@@ -413,7 +445,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithEmptyList() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> emptyList = Collections.emptyList();
+        List<AckID> emptyList = Collections.emptyList();
         
         CompletableFuture<Void> future = testSubscription.sendNacks(emptyList);
         assertTrue(future.isDone());
@@ -423,7 +455,11 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithNullAckIDInList() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = Arrays.asList("test-ack-id-1", null, "test-ack-id-2");
+        List<AckID> ackIDs = Arrays.asList(
+            new TestAckID("test-ack-id-1"),
+            null,
+            new TestAckID("test-ack-id-2")
+        );
         
         InvalidArgumentException exception = assertThrows(InvalidArgumentException.class, 
             () -> testSubscription.sendNacks(ackIDs));
@@ -433,7 +469,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithSingleAckID() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = Arrays.asList("test-ack-id");
+        List<AckID> ackIDs = Arrays.asList(new TestAckID("test-ack-id"));
         
         assertDoesNotThrow(() -> testSubscription.sendNacks(ackIDs));
     }
@@ -441,9 +477,9 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithLargeList() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = new ArrayList<>();
+        List<AckID> ackIDs = new ArrayList<>();
         for (int i = 0; i < 1000; i++) {
-            ackIDs.add("test-ack-id-" + i);
+            ackIDs.add(new TestAckID("test-ack-id-" + i));
         }
         
         assertDoesNotThrow(() -> testSubscription.sendNacks(ackIDs));
@@ -463,7 +499,8 @@ public class AbstractSubscriptionTest {
             new Thread(() -> {
                 try {
                     for (int j = 0; j < acksPerThread; j++) {
-                        List<String> ackIDs = Arrays.asList("thread-" + threadId + "-ack-" + j);
+                        final String ackIdValue = "thread-" + threadId + "-ack-" + j;
+                        List<AckID> ackIDs = Arrays.asList(new TestAckID(ackIdValue));
                         testSubscription.sendNacks(ackIDs);
                     }
                 } catch (Exception e) {
@@ -481,7 +518,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNackAndSendNacksConsistency() {
         TestSubscription testSubscription = new TestSubscription();
-        String ackID = "test-ack-id";
+        AckID ackID = new TestAckID("test-ack-id");
         
         // Both methods should work with the same AckID
         assertDoesNotThrow(() -> testSubscription.sendNack(ackID));
@@ -491,7 +528,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNackAfterSubscriptionClose() throws Exception {
         TestSubscription testSubscription = new TestSubscription();
-        String ackID = "test-ack-id";
+        AckID ackID = new TestAckID("test-ack-id");
         
         testSubscription.close();
         
@@ -501,7 +538,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksAfterSubscriptionClose() throws Exception {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = Arrays.asList("test-ack-id");
+        List<AckID> ackIDs = Arrays.asList(new TestAckID("test-ack-id"));
         
         testSubscription.close();
         
@@ -512,8 +549,8 @@ public class AbstractSubscriptionTest {
     void testSendNackWithDifferentAckIDTypes() {
         TestSubscription testSubscription = new TestSubscription();
         
-        String ackID1 = "test-ack-id-1";
-        String ackID2 = "test-ack-id-2";
+        AckID ackID1 = new TestAckID("test-ack-id-1");
+        AckID ackID2 = new TestAckID("test-ack-id-2");
         
         assertDoesNotThrow(() -> testSubscription.sendNack(ackID1));
         assertDoesNotThrow(() -> testSubscription.sendNack(ackID2));
@@ -522,7 +559,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithMixedAckIDTypes() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = Arrays.asList("test-ack-id-1", "test-ack-id-2");
+        List<AckID> ackIDs = Arrays.asList(new TestAckID("test-ack-id-1"), new TestAckID("test-ack-id-2"));
         
         assertDoesNotThrow(() -> testSubscription.sendNacks(ackIDs));
     }
@@ -531,7 +568,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksReturnValue() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = Arrays.asList("test-ack-id");
+        List<AckID> ackIDs = Arrays.asList(new TestAckID("test-ack-id"));
         
         CompletableFuture<Void> future = testSubscription.sendNacks(ackIDs);
         
@@ -543,7 +580,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithEmptyListReturnValue() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> emptyList = Collections.emptyList();
+        List<AckID> emptyList = Collections.emptyList();
         
         CompletableFuture<Void> future = testSubscription.sendNacks(emptyList);
         
@@ -554,7 +591,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNackAndSendAckConsistency() {
         TestSubscription testSubscription = new TestSubscription();
-        String ackID = "test-ack-id";
+        AckID ackID = new TestAckID("test-ack-id");
         
         // Both ack and nack should work with the same AckID
         assertDoesNotThrow(() -> testSubscription.sendAck(ackID));
@@ -564,7 +601,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksAndSendAcksConsistency() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> ackIDs = Arrays.asList("test-ack-id");
+        List<AckID> ackIDs = Arrays.asList(new TestAckID("test-ack-id"));
         
         // Both acks and nacks should work with the same AckID list
         assertDoesNotThrow(() -> testSubscription.sendAcks(ackIDs));
@@ -576,7 +613,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNackWithSameAckIDMultipleTimes() {
         TestSubscription testSubscription = new TestSubscription();
-        String ackID = "test-ack-id";
+        AckID ackID = new TestAckID("test-ack-id");
         
         // Send the same AckID multiple times - should not throw exception
         assertDoesNotThrow(() -> testSubscription.sendNack(ackID));
@@ -587,8 +624,8 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithSameAckIDMultipleTimes() {
         TestSubscription testSubscription = new TestSubscription();
-        String ackID = "test-ack-id";
-        List<String> ackIDs = Arrays.asList(ackID);
+        AckID ackID = new TestAckID("test-ack-id");
+        List<AckID> ackIDs = Arrays.asList(ackID);
         
         // Send the same AckID multiple times - should not throw exception
         assertDoesNotThrow(() -> testSubscription.sendNacks(ackIDs));
@@ -599,7 +636,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNackWithNullAckIDAfterValidAckID() {
         TestSubscription testSubscription = new TestSubscription();
-        String validAckID = "valid-ack-id";
+        AckID validAckID = new TestAckID("valid-ack-id");
         
         // First send a valid nack
         assertDoesNotThrow(() -> testSubscription.sendNack(validAckID));
@@ -611,7 +648,7 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNacksWithNullAckIDAfterValidAckIDs() {
         TestSubscription testSubscription = new TestSubscription();
-        List<String> validAckIDs = Arrays.asList("valid-ack-id");
+        List<AckID> validAckIDs = Arrays.asList(new TestAckID("valid-ack-id"));
         
         // First send valid nacks
         assertDoesNotThrow(() -> testSubscription.sendNacks(validAckIDs));
@@ -623,8 +660,8 @@ public class AbstractSubscriptionTest {
     @Test
     void testSendNackAndSendNacksMixedUsage() {
         TestSubscription testSubscription = new TestSubscription();
-        String singleAckID = "single-ack-id";
-        List<String> multipleAckIDs = Arrays.asList("multiple-ack-id-1", "multiple-ack-id-2");
+        AckID singleAckID = new TestAckID("single-ack-id");
+        List<AckID> multipleAckIDs = Arrays.asList(new TestAckID("multiple-ack-id-1"), new TestAckID("multiple-ack-id-2"));
         
         // Mix single and multiple nack calls
         assertDoesNotThrow(() -> testSubscription.sendNack(singleAckID));
